[package]
name = "htable"
version = "0.1.0"
authors = ["Oliver Funk <oliver.funk@thoughtexpress.com>"]

description = "A simple to use and extenable table that can hold hold many different types at once."
repository = "https://github.com/oliverfunk/hvec"

license = "MIT/Apache-2.0"
keywords = ["heterogeneous", "table", "vector", "list", "multi-vec"]
categories = ["data-structures"]

[badges]

travis-ci = { repository = "oliverfunk/hvec", branch = "master" }

[dependencies]
